# white-swan

./: .gitignore  Cargo.toml  Pipfile
cli/: Cargo.toml
cli/src/: main.rs  utils.rs
crates/exchange/: Cargo.toml
crates/exchange/src/: lib.rs  order.rs  pair.rs  traits.rs
crates/exchange/src/bitmex/: mod.rs
crates/exchange/src/bybit/: mod.rs
crates/stream-manager/: Cargo.toml
scripts/: req_auth.py  req_get_balance.py  wss_auth.py
