[workspace]
resolver = "2"
members = ["cli", "crates/exchange", "crates/stream-manager"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
clap = "4.4.11"
futures = "0.3.29"
hmac = "0.12.1"
hex = "0.4.3"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_qs = "0.12.0"
sha2 = "0.10.8"
tokio = { version = "1.34.0", features = ["full"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.0"
uuid = { version = "1.6.1", features = ["serde", "v4"] }
