[package]
name = "exchange"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono.workspace = true
futures.workspace = true
hmac.workspace = true
reqwest.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_qs.workspace = true
sha2.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true
